# jasiapi

./: .gitignore  README.md  jasiapi.py  pyproject.toml
doc/source/: conf.py  index.md
tests/: test_earthquake.py  test_intensity.py  test_statistics.py
