[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jasiapi"
dynamic = ["version"]
description = "Unofficial Python binding of JMA Seismic Intensity DB Search (気象庁震度データベース検索) API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = [
    "earthquake",
    "気象庁震度データベース検索",
    "JMA Seismic Intensity DB Search"
]
authors = [
    { name = "Kentaro Tatsumi", email = "paqira.2019@gmail.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "requests>=2.31",
]

[project.urls]
Documentation = "https://github.com/paqira/jasiapi#readme"
Issues = "https://github.com/paqira/jasiapi/issues"
Source = "https://github.com/paqira/jasiapi"

[tool.hatch.version]
path = "jasiapi.py"

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/x tests}"

